--- a/scss/Header.scss
+++ b/scss/Header.scss
@@ -7,7 +7,8 @@
     height: 14em;
 
     @include responsive(tab-land) {
-        padding: 1em 4em;
+        padding: 1em 2em;
+        height: 13em;
     }
 
     @include responsive(tab-port) {
@@ -30,12 +31,9 @@
     grid-template-columns: 2fr 10fr 4fr;
     gap: 1em 4em;
 
-    @include responsive(tab-land) {
-        grid-template-columns: 2fr 8fr 4fr;
-        gap: 1em 2em;
-    }
+    
 
-    @include responsive(tab-port) {
+    @include responsive(tab-land) {
         grid-template-columns: 2fr 9fr 1fr;
         gap: 1em 2em;
         justify-content: center;
@@ -90,7 +88,7 @@
     align-items: center;
     font-size: 0.8em;
 
-    @include responsive(tab-port) {
+    @include responsive(tab-land) {
         flex-direction: row-reverse;
         justify-content: start;
     }
@@ -101,7 +99,7 @@
     margin-right: 3em;
     text-align: right;  
     
-    @include responsive(tab-port) {
+    @include responsive(tab-land) {
         text-align: left;  
         margin-left: 2em;
     }
@@ -145,7 +143,7 @@
 .burgerIcon {
     display: none;
 
-    @include responsive(tab-port) {
+    @include responsive(tab-land) {
         display: block;
 
         width: 70px;
@@ -169,7 +167,7 @@
     align-items: center;
     font-size: 1.6em;
     font-weight: bold;
-    @include responsive(tab-port) {
+    @include responsive(tab-land) {
         display: none;
     }
 }
