--- a/compiledStyle.css
+++ b/compiledStyle.css
@@ -148,6 +148,7 @@
 
 .burgerIcon {
   display: none;
+  cursor: pointer;
 }
 @media only screen and (max-width: 1400px) {
   .burgerIcon {
@@ -155,6 +156,9 @@
     width: 70px;
     height: 70px;
   }
+}
+.burgerIcon:hover {
+  opacity: 0.8;
 }
 
 .burgerBar {
@@ -196,10 +200,15 @@
 
 .projects {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 2em;
 }
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 1400px) {
+  .projects {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media only screen and (max-width: 600px) {
   .projects {
     grid-template-columns: 1fr;
   }
@@ -242,6 +251,69 @@
   font-weight: 700;
   padding: 1em;
   color: #FFF;
+}
+
+.mobileNav {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  z-index: 1;
+}
+
+.close {
+  position: absolute;
+  right: 32px;
+  top: 32px;
+  width: 50px;
+  height: 50px;
+  opacity: 1;
+  cursor: pointer;
+}
+
+.close:hover {
+  opacity: 0.8;
+}
+
+.close:before, .close:after {
+  position: absolute;
+  left: 15px;
+  content: " ";
+  height: 100%;
+  width: 8%;
+  background-color: white;
+}
+
+.close:before {
+  transform: rotate(45deg);
+}
+
+.close:after {
+  transform: rotate(-45deg);
+}
+
+.mobileNavList {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 100px;
+  display: flex;
+  flex-direction: column;
+}
+
+.mobileNavLink {
+  margin: 1em 0em;
+  font-size: 3em;
+  text-align: center;
+  color: white;
+}
+
+.mobileNavLink a {
+  color: white;
+  text-decoration: none;
+}
+.mobileNavLink a:hover {
+  color: #bbb;
 }
 
 @media only screen and (max-width: 1800px) {
