--- a/scss/Header.scss
+++ b/scss/Header.scss
@@ -2,6 +2,7 @@
 
 .Header {
     background-color: black;
+    
 }
 
 .HeaderOuter {
@@ -74,6 +75,7 @@
     display: flex;
     align-items: center;
     justify-self: start;
+    
 
     @include responsive(tab-port) {
         
@@ -148,12 +150,17 @@
 
 .burgerIcon {
     display: none;
+    cursor: pointer;
 
     @include responsive(tab-land) {
         display: block;
 
         width: 70px;
         height: 70px;
+    }
+
+    &:hover {
+        opacity: 0.8;
     }
 }
 
