--- a/scss/Projects.scss
+++ b/scss/Projects.scss
@@ -1,9 +1,13 @@
 .projects {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 2em;
 
-    @include responsive(tab-port) {
+    @include responsive(tab-land) {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    @include responsive(phone) {
         grid-template-columns: 1fr;
     }
 }
