--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,6 +2,7 @@
 
 @import "./Header.scss";
 @import "./Projects.scss";
+@import "./mobileNav.scss";
 
 html {
     @include responsive(small-desktop) {
