added gallery page, playing with nav bar

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,6 +3,7 @@
 @import "./Header.scss";
 @import "./Projects.scss";
 @import "./mobileNav.scss";
+@import "./galary.scss";
 
 html {
     @include responsive(small-desktop) {
