--- a/compiledStyle.css
+++ b/compiledStyle.css
@@ -45,13 +45,13 @@
 }
 @media only screen and (max-width: 600px) {
   .HeaderContent {
-    grid-template-columns: 2fr 7fr 2fr;
+    grid-template-columns: 2fr 7fr 1fr;
     gap: 0.5em 1em;
   }
 }
 @media only screen and (max-width: 350px) {
   .HeaderContent {
-    grid-template-columns: 2fr 7fr 2fr;
+    grid-template-columns: 2fr 7fr 1fr;
     gap: 0.1em 1em;
   }
 }
@@ -150,11 +150,17 @@
   display: none;
   cursor: pointer;
 }
-@media only screen and (max-width: 1400px) {
+@media only screen and (max-width: 900px) {
   .burgerIcon {
     display: block;
     width: 70px;
     height: 70px;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .burgerIcon {
+    width: 40px;
+    height: 40px;
   }
 }
 .burgerIcon:hover {
@@ -178,7 +184,7 @@
   font-size: 1.6em;
   font-weight: bold;
 }
-@media only screen and (max-width: 1400px) {
+@media only screen and (max-width: 900px) {
   .nav {
     display: none;
   }
@@ -314,6 +320,78 @@
 }
 .mobileNavLink a:hover {
   color: #bbb;
+}
+
+.galary {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-auto-rows: 20em;
+  gap: 1em;
+  grid-template-areas: "a b b c c" "a b b d e" "f f g h h" "i i g j j";
+}
+@media only screen and (max-width: 1800px) {
+  .galary {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-areas: "a b b c" "d d e c" "f g g h" "f i j j";
+  }
+}
+@media only screen and (max-width: 600px) {
+  .galary {
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: "a a" "b c" "b d" "e f" "g f" "h h" "i j";
+  }
+}
+@media only screen and (max-width: 350px) {
+  .galary {
+    grid-template-columns: 1fr;
+    grid-template-areas: "a" "b" "c" "d" "e" "f" "g" "h" "i" "j";
+  }
+}
+
+.galaryImage {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.a {
+  grid-area: a;
+}
+
+.b {
+  grid-area: b;
+}
+
+.c {
+  grid-area: c;
+}
+
+.d {
+  grid-area: d;
+}
+
+.e {
+  grid-area: e;
+}
+
+.f {
+  grid-area: f;
+}
+
+.g {
+  grid-area: g;
+}
+
+.h {
+  grid-area: h;
+}
+
+.i {
+  grid-area: i;
+}
+
+.j {
+  grid-area: j;
 }
 
 @media only screen and (max-width: 1800px) {
