--- a/scss/Header.scss
+++ b/scss/Header.scss
@@ -2,7 +2,6 @@
 
 .Header {
     background-color: black;
-    
 }
 
 .HeaderOuter {
@@ -44,12 +43,12 @@
     }
 
     @include responsive(phone) {
-        grid-template-columns: 2fr 7fr 2fr;
+        grid-template-columns: 2fr 7fr 1fr;
         gap: 0.5em 1em;
     }
 
     @include responsive(small-phone) {
-        grid-template-columns: 2fr 7fr 2fr;
+        grid-template-columns: 2fr 7fr 1fr;
         gap: 0.1em 1em;
     }
 }
@@ -152,11 +151,18 @@
     display: none;
     cursor: pointer;
 
-    @include responsive(tab-land) {
+    @include responsive(tab-port) {
         display: block;
 
         width: 70px;
         height: 70px;
+    }
+
+    @include responsive(phone) {
+        
+
+        width: 40px;
+        height: 40px;
     }
 
     &:hover {
@@ -180,7 +186,7 @@
     align-items: center;
     font-size: 1.6em;
     font-weight: bold;
-    @include responsive(tab-land) {
+    @include responsive(tab-port) {
         display: none;
     }
 }
