--- a/scss/modules/_mediaQueries.scss
+++ b/scss/modules/_mediaQueries.scss
@@ -1,18 +1,18 @@
 @mixin responsive($breakpoint) {
     @if $breakpoint == small-phone {
-        @media (max-width: 350px) { @content };  
+        @media only screen and (max-width: 350px) { @content };  
     }
     @if $breakpoint == phone {
-        @media (max-width: 600px) { @content };  
+        @media only screen and (max-width: 600px) { @content };  
     }
     @if $breakpoint == tab-port {
-        @media (max-width: 900px) { @content };  
+        @media only screen and (max-width: 900px) { @content };  
     }
     @if $breakpoint == tab-land {
-        @media (max-width: 1400px) { @content };  
+        @media only screen and (max-width: 1400px) { @content };  
     }
     @if $breakpoint == small-desktop {
-        @media (max-width: 1800px) { @content };  
+        @media only screen and (max-width: 1800px) { @content };  
     }
     
 }
