--- a/scss/Header.scss
+++ b/scss/Header.scss
@@ -6,15 +6,16 @@
 
 .HeaderOuter {
     padding: 1em 12em;
-    height: 14em;
+    height: 10em;
 
     @include responsive(tab-land) {
         padding: 1em 2em;
-        height: 13em;
+        height: 12em;
     }
 
     @include responsive(tab-port) {
         padding: 1em 2em;
+        height: 14em;
     }
 
     @include responsive(phone) {
@@ -43,24 +44,28 @@
     }
 
     @include responsive(phone) {
-        grid-template-columns: 2fr 7fr 1fr;
+        grid-template-columns: 7fr 1fr;
         gap: 0.5em 1em;
     }
 
     @include responsive(small-phone) {
-        grid-template-columns: 2fr 7fr 1fr;
         gap: 0.1em 1em;
     }
 }
 
 .HeaderImageContainer {
     grid-row: 1 / 3;
+    
+    @include responsive(phone) {
+        display: none;
+    }
 }
 
 .headerImage {
     object-fit: cover;
     height: 100%;
     width: 100%;
+
 }
 
 
@@ -93,9 +98,9 @@
 .HeaderRight {
     display: flex;
     align-items: center;
-    font-size: 0.8em;
+    font-size: 1em;
 
-    @include responsive(tab-land) {
+    @include responsive(tab-port) {
         flex-direction: row-reverse;
         justify-content: start;
     }
@@ -106,9 +111,14 @@
     margin-right: 3em;
     text-align: right;  
     
-    @include responsive(tab-land) {
+    @include responsive(tab-port) {
         text-align: left;  
         margin-left: 2em;
+        margin-right: 0em;
+    }
+
+    @include responsive(phone) {
+        font-size: 1em;
     }
 }
 
