--- a/scss/Projects.scss
+++ b/scss/Projects.scss
@@ -29,17 +29,25 @@
     position: absolute;
     bottom: 0%;
     left: 50%;
-    font-size: 1.5em;
+    font-size: 1.2em;
     width: 100%;
     transform: translate(-50%, 0%);
     background-color: #00000098;
 
+    @include responsive(small-desktop) {
+        font-size: 1.4em;
+    }
+
     @include responsive(tab-land) {
-        font-size: 1em;
+        font-size: 1.6em;
     }
 
     @include responsive(tab-port) {
-        font-size: 1.5em;
+        font-size: 1.4em;
+    }
+
+    @include responsive(phone) {
+        font-size: 2em;
     }
 }
 
