--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,8 +4,12 @@
 @import "./Projects.scss";
 @import "./mobileNav.scss";
 @import "./galary.scss";
+@import "./contact.scss";
 
 html {
+
+    
+
     @include responsive(small-desktop) {
         font-size: 0.8em;
     }
@@ -67,7 +71,7 @@ h2 {
 
     @include responsive(phone) {
         width: 90%;
-        font-size: 1.2em;
+        
     }
 }
 
@@ -80,6 +84,10 @@ h2 {
 
     @include responsive(tab-port) {
         margin: 4em 4em;
+    }
+
+    @include responsive(phone) {
+        margin: 4em 1em;
     }
 }
 
