--- a/compiledStyle.css
+++ b/compiledStyle.css
@@ -252,7 +252,6 @@
   width: 100%;
   transform: translate(-50%, 0%);
   background-color: rgba(0, 0, 0, 0.5960784314);
-  display: none;
 }
 @media only screen and (max-width: 1800px) {
   .projectTextArea {
@@ -344,7 +343,7 @@
   color: #bbb;
 }
 
-.galary {
+.gallary {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-auto-rows: 20em;
@@ -352,25 +351,25 @@
   grid-template-areas: "a b b c c" "a b b d e" "f f g h h" "i i g j j";
 }
 @media only screen and (max-width: 1800px) {
-  .galary {
+  .gallary {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-areas: "a b b c" "d d e c" "f g g h" "f i j j";
   }
 }
 @media only screen and (max-width: 600px) {
-  .galary {
+  .gallary {
     grid-template-columns: 1fr 1fr;
     grid-template-areas: "a a" "b c" "b d" "e f" "g f" "h h" "i j";
   }
 }
 @media only screen and (max-width: 350px) {
-  .galary {
+  .gallary {
     grid-template-columns: 1fr;
     grid-template-areas: "a" "b" "c" "d" "e" "f" "g" "h" "i" "j";
   }
 }
 
-.galaryImage {
+.gallaryImage {
   object-fit: cover;
   width: 100%;
   height: 100%;
@@ -461,6 +460,14 @@
   color: #444;
 }
 
+.terms {
+  padding: 1em 1em;
+  min-height: 40%;
+}
+.terms p {
+  font-size: 1.2em;
+}
+
 @media only screen and (max-width: 1800px) {
   html {
     font-size: 0.8em;
@@ -485,6 +492,10 @@
 body {
   margin: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100%;
 }
 
 h2 {
