--- a/scss/gallary.scss
+++ b/scss/gallary.scss
@@ -1,4 +1,4 @@
-.galary{
+.gallary{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-auto-rows: 20em;
@@ -49,7 +49,7 @@
     }
 }
 
-.galaryImage {
+.gallaryImage {
     object-fit: cover;
     width: 100%;
     height: 100%;
