--- a/compiledStyle.css
+++ b/compiledStyle.css
@@ -374,45 +374,171 @@
   width: 100%;
   height: 100%;
 }
-
-.a {
-  grid-area: a;
+.gallaryImage:nth-child(10n+1) {
+  grid-column: span 1;
+  grid-row: span 2;
 }
-
-.b {
-  grid-area: b;
+.gallaryImage:nth-child(10n+2) {
+  grid-column: span 2;
+  grid-row: span 2;
 }
-
-.c {
-  grid-area: c;
+.gallaryImage:nth-child(10n+3) {
+  grid-column: span 2;
+  grid-row: span 1;
 }
-
-.d {
-  grid-area: d;
+.gallaryImage:nth-child(10n+4) {
+  grid-column: span 1;
+  grid-row: span 1;
 }
-
-.e {
-  grid-area: e;
+.gallaryImage:nth-child(10n+5) {
+  grid-column: span 1;
+  grid-row: span 1;
 }
-
-.f {
-  grid-area: f;
+.gallaryImage:nth-child(10n+6) {
+  grid-column: span 2;
+  grid-row: span 1;
 }
-
-.g {
-  grid-area: g;
+.gallaryImage:nth-child(10n+7) {
+  grid-column: span 1;
+  grid-row: span 2;
 }
-
-.h {
-  grid-area: h;
+.gallaryImage:nth-child(10n+8) {
+  grid-column: span 2;
+  grid-row: span 1;
 }
-
-.i {
-  grid-area: i;
+.gallaryImage:nth-child(10n+9) {
+  grid-column: span 2;
+  grid-row: span 1;
 }
-
-.j {
-  grid-area: j;
+.gallaryImage:nth-child(10n+10) {
+  grid-column: span 2;
+  grid-row: span 1;
+}
+@media only screen and (max-width: 1800px) {
+  .gallaryImage:nth-child(10n+1) {
+    grid-column: span 1;
+    grid-row: span 1;
+  }
+  .gallaryImage:nth-child(10n+2) {
+    grid-column: span 2;
+    grid-row: span 1;
+  }
+  .gallaryImage:nth-child(10n+3) {
+    grid-column: span 1;
+    grid-row: span 2;
+  }
+  .gallaryImage:nth-child(10n+4) {
+    grid-column: span 2;
+    grid-row: span 1;
+  }
+  .gallaryImage:nth-child(10n+5) {
+    grid-column: span 1;
+    grid-row: span 1;
+  }
+  .gallaryImage:nth-child(10n+6) {
+    grid-column: span 1;
+    grid-row: span 2;
+  }
+  .gallaryImage:nth-child(10n+7) {
+    grid-column: span 2;
+    grid-row: span 1;
+  }
+  .gallaryImage:nth-child(10n+8) {
+    grid-column: span 1;
+    grid-row: span 1;
+  }
+  .gallaryImage:nth-child(10n+9) {
+    grid-column: span 1;
+    grid-row: span 1;
+  }
+  .gallaryImage:nth-child(10n+10) {
+    grid-column: span 2;
+    grid-row: span 1;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .gallaryImage:nth-child(10n+1) {
+    grid-column: span 2;
+    grid-row: span 1;
+  }
+  .gallaryImage:nth-child(10n+2) {
+    grid-column: span 1;
+    grid-row: span 2;
+  }
+  .gallaryImage:nth-child(10n+3) {
+    grid-column: span 1;
+    grid-row: span 1;
+  }
+  .gallaryImage:nth-child(10n+4) {
+    grid-column: span 1;
+    grid-row: span 1;
+  }
+  .gallaryImage:nth-child(10n+5) {
+    grid-column: span 1;
+    grid-row: span 1;
+  }
+  .gallaryImage:nth-child(10n+6) {
+    grid-column: span 1;
+    grid-row: span 2;
+  }
+  .gallaryImage:nth-child(10n+7) {
+    grid-column: span 1;
+    grid-row: span 1;
+  }
+  .gallaryImage:nth-child(10n+8) {
+    grid-column: span 2;
+    grid-row: span 1;
+  }
+  .gallaryImage:nth-child(10n+9) {
+    grid-column: span 1;
+    grid-row: span 1;
+  }
+  .gallaryImage:nth-child(10n+10) {
+    grid-column: span 1;
+    grid-row: span 1;
+  }
+}
+@media only screen and (max-width: 350px) {
+  .gallaryImage:nth-child(10n+1) {
+    grid-column: span 1;
+    grid-row: span 1;
+  }
+  .gallaryImage:nth-child(10n+2) {
+    grid-column: span 1;
+    grid-row: span 1;
+  }
+  .gallaryImage:nth-child(10n+3) {
+    grid-column: span 1;
+    grid-row: span 1;
+  }
+  .gallaryImage:nth-child(10n+4) {
+    grid-column: span 1;
+    grid-row: span 1;
+  }
+  .gallaryImage:nth-child(10n+5) {
+    grid-column: span 1;
+    grid-row: span 1;
+  }
+  .gallaryImage:nth-child(10n+6) {
+    grid-column: span 1;
+    grid-row: span 1;
+  }
+  .gallaryImage:nth-child(10n+7) {
+    grid-column: span 1;
+    grid-row: span 1;
+  }
+  .gallaryImage:nth-child(10n+8) {
+    grid-column: span 1;
+    grid-row: span 1;
+  }
+  .gallaryImage:nth-child(10n+9) {
+    grid-column: span 1;
+    grid-row: span 1;
+  }
+  .gallaryImage:nth-child(10n+10) {
+    grid-column: span 1;
+    grid-row: span 1;
+  }
 }
 
 .contact_deetails {
