--- a/scss/gallary.scss
+++ b/scss/gallary.scss
@@ -9,6 +9,7 @@
     "a b b d e"
     "f f g h h"
     "i i g j j";
+    
 
     @include responsive(small-desktop) {
         grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -53,17 +54,214 @@
     object-fit: cover;
     width: 100%;
     height: 100%;
+    
+    &:nth-child(10n + 1){
+        grid-column: span 1;
+        grid-row: span 2;
+    }
+    
+    &:nth-child(10n + 2){
+        grid-column: span 2;
+        grid-row: span 2;
+    }
+    
+    &:nth-child(10n + 3){
+        grid-column: span 2;
+        grid-row: span 1;
+    }
+    
+    &:nth-child(10n + 4){
+        grid-column: span 1;
+        grid-row: span 1;
+    }
+    
+    &:nth-child(10n + 5){
+        grid-column: span 1;
+        grid-row: span 1;
+    }
+    
+    &:nth-child(10n + 6){
+        grid-column: span 2;
+        grid-row: span 1;
+    }
+    
+    &:nth-child(10n + 7){
+        grid-column: span 1;
+        grid-row: span 2;
+    }
+    
+    &:nth-child(10n + 8){
+        grid-column: span 2;
+        grid-row: span 1;
+    }
+    
+    &:nth-child(10n + 9){
+        grid-column: span 2;
+        grid-row: span 1;
+    }
+
+    &:nth-child(10n + 10){
+        grid-column: span 2;
+        grid-row: span 1;
+    }
+
+    @include responsive(small-desktop) {
+        &:nth-child(10n + 1){
+            grid-column: span 1;
+            grid-row: span 1;
+        }
+        
+        &:nth-child(10n + 2){
+            grid-column: span 2;
+            grid-row: span 1;
+        }
+        
+        &:nth-child(10n + 3){
+            grid-column: span 1;
+            grid-row: span 2;
+        }
+        
+        &:nth-child(10n + 4){
+            grid-column: span 2;
+            grid-row: span 1;
+        }
+        
+        &:nth-child(10n + 5){
+            grid-column: span 1;
+            grid-row: span 1;
+        }
+        
+        &:nth-child(10n + 6){
+            grid-column: span 1;
+            grid-row: span 2;
+        }
+        
+        &:nth-child(10n + 7){
+            grid-column: span 2;
+            grid-row: span 1;
+        }
+        
+        &:nth-child(10n + 8){
+            grid-column: span 1;
+            grid-row: span 1;
+        }
+        
+        &:nth-child(10n + 9){
+            grid-column: span 1;
+            grid-row: span 1;
+        }
+
+        &:nth-child(10n + 10){
+            grid-column: span 2;
+            grid-row: span 1;
+        }
+    }
+
+    @include responsive(phone) {
+        &:nth-child(10n + 1){
+            grid-column: span 2;
+            grid-row: span 1;
+        }
+        
+        &:nth-child(10n + 2){
+            grid-column: span 1;
+            grid-row: span 2;
+        }
+        
+        &:nth-child(10n + 3){
+            grid-column: span 1;
+            grid-row: span 1;
+        }
+        
+        &:nth-child(10n + 4){
+            grid-column: span 1;
+            grid-row: span 1;
+        }
+        
+        &:nth-child(10n + 5){
+            grid-column: span 1;
+            grid-row: span 1;
+        }
+        
+        &:nth-child(10n + 6){
+            grid-column: span 1;
+            grid-row: span 2;
+        }
+        
+        &:nth-child(10n + 7){
+            grid-column: span 1;
+            grid-row: span 1;
+        }
+        
+        &:nth-child(10n + 8){
+            grid-column: span 2;
+            grid-row: span 1;
+        }
+        
+        &:nth-child(10n + 9){
+            grid-column: span 1;
+            grid-row: span 1;
+        }
+
+        &:nth-child(10n + 10){
+            grid-column: span 1;
+            grid-row: span 1;
+        }
+    }
+
+    @include responsive(small-phone) {
+        &:nth-child(10n + 1){
+            grid-column: span 1;
+            grid-row: span 1;
+        }
+        
+        &:nth-child(10n + 2){
+            grid-column: span 1;
+            grid-row: span 1;
+        }
+        
+        &:nth-child(10n + 3){
+            grid-column: span 1;
+            grid-row: span 1;
+        }
+        
+        &:nth-child(10n + 4){
+            grid-column: span 1;
+            grid-row: span 1;
+        }
+        
+        &:nth-child(10n + 5){
+            grid-column: span 1;
+            grid-row: span 1;
+        }
+        
+        &:nth-child(10n + 6){
+            grid-column: span 1;
+            grid-row: span 1;
+        }
+        
+        &:nth-child(10n + 7){
+            grid-column: span 1;
+            grid-row: span 1;
+        }
+        
+        &:nth-child(10n + 8){
+            grid-column: span 1;
+            grid-row: span 1;
+        }
+        
+        &:nth-child(10n + 9){
+            grid-column: span 1;
+            grid-row: span 1;
+        }
+
+        &:nth-child(10n + 10){
+            grid-column: span 1;
+            grid-row: span 1;
+        }
+    }
 }
 
 
 
-.a { grid-area: a; }
-.b { grid-area: b; }
-.c { grid-area: c; }
-.d { grid-area: d; }
-.e { grid-area: e; }
-.f { grid-area: f; }
-.g { grid-area: g; }
-.h { grid-area: h; }
-.i { grid-area: i; }
-.j { grid-area: j; }
+
