--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,7 +3,7 @@
 @import "./Header.scss";
 @import "./Projects.scss";
 @import "./mobileNav.scss";
-@import "./gallary.scss";
+@import "./gallery.scss";
 @import "./contact.scss";
 @import "./terms.scss";
 
