--- a/scss/gallary.scss
+++ b/scss/gallary.scss
@@ -1,4 +1,4 @@
-.gallary{
+.gallery{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-auto-rows: 20em;
@@ -50,7 +50,7 @@
     }
 }
 
-.gallaryImage {
+.galleryImage {
     object-fit: cover;
     width: 100%;
     height: 100%;
